# cpp_task2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: CatOperation.h  EchoOperation.h  GrepOperation.h  IOperation.h  StreamingTextEditor.h
src/: CMakeLists.txt  StreamingTextEditor.cpp
tests/: CMakeLists.txt  test_with_line_breaks.txt  tests.cpp
